--- a/periodic_table.html
+++ b/periodic_table.html
@@ -20,36 +20,36 @@
         
         <th scope="row">Period 1</th>
 
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">1 H</a></li></td>
+        <td class="h1"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">1 H</a></li></td>
    
     </tr>
     <tr>
         <th scope="row">2</th>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">3 Li</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">4 Be</a></li></td>
+        <td class="h2"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">3 Li</a></li></td>
+        <td class="h3"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">4 Be</a></li></td>
        
     </tr>
     <tr>
         <th scope="row">3</th>
-        <td><li><a class="1" href="https://nl.wikipedia.org/wiki/Periodiek_systeem">11 Na</a></li></td>
-        <td><li><a class="1" href="https://nl.wikipedia.org/wiki/Periodiek_systeem">12 Mg</a></li></td>
+        <td class="h2"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">11 Na</a></li></td>
+        <td class="h3"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">12 Mg</a></li></td>
 </tr>
 <tr>
         <th scope="row">4</th>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">19 K</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">20 Ca</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">21 Sc</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">22 Ti</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">23 V</a></li></td>
+        <td class="h2"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">19 K</a></li></td>
+        <td class="h3"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">20 Ca</a></li></td>
+        <td class="h4"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">21 Sc</a></li></td>
+        <td class="h4"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">22 Ti</a></li></td>
+        <td class="h4"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">23 V</a></li></td>
 </tr>
 <tr>
 
         <th scope="row">5</th>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">37 Rb</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">38 Sr</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">39 Y</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">40 Zr</a></li></td>
-        <td><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">41 Nb</a></li></td>
+        <td class="h2"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">37 Rb</a></li></td>
+        <td class="h3"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">38 Sr</a></li></td>
+        <td class="h4"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">39 Y</a></li></td>
+        <td class="h4"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">40 Zr</a></li></td>
+        <td class="h4"><li><a href="https://nl.wikipedia.org/wiki/Periodiek_systeem">41 Nb</a></li></td>
   
 
 </table>
